Fixed logo image height problem on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -752,7 +752,6 @@
 
 	#intro #logo-image-wrapper img{
     	width:100% !important;
-    	height:100% !important;
     	display:block;
 	}
 
